<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81060D"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView_user"
        android:layout_width="215dp"
        android:layout_height="158dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="98dp"
        android:layout_marginRight="98dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:importantForAutofill="no"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/textView_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="276dp"
        android:layout_marginRight="276dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_user" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:importantForAutofill="no"
        android:hint="@string/email"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textView_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_email" />


    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:importantForAutofill="no"
        android:hint="@string/password"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"

        android:layout_marginLeft="104dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="133dp"
        android:background="#BE3737"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

</androidx.constraintlayout.widget.ConstraintLayout>